# python-project-lvl2

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: lint-push.yml  test-push copy.yml  test-push.yml
gendiff/: __init__.py
gendiff/scripts/: gendiff.py  gendiff_main.py  generate_diff.py  generate_diff_yaml.py  stylish.py
gendiff/scripts/json_formatter/: json_format.py
gendiff/scripts/plain_formatter/: plain.py
gendiff/scripts/stylish_formatter/: stylish.py
hexlet-code/: pyproject.toml
tests/: test_diff.py  test_json.py  test_plain.py  test_with_children.py  test_yaml.py
tests/fixtures/: file2.json  file2.yaml  result_json.json  right_result.json  right_result_plain.txt  right_result_test2.txt  test2_2.json
