[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "project2"
authors = ["hellhamster"]
packages = [
 { include = "gendiff" },
]

[tool.poetry.dependencies]
python = ">=3,8"
flake8 = "^4.0.1"
PyYAML = "^6.0"
pytest = "^7.0.0"

[tool.poetry.dev-dependencies]

[tool.pytest]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests",]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff_main:main"